<resources>
    <string name="app_name">FileShareLocal</string>
    <string name="Ma">Ma</string>
    <string name="WishAll">Sarve Jana Sukhino Bhavantu; लोकाः समस्ताः सुखिनोभवंतु ॥ </string>
    <string name="Back">Back</string>
    <string name="NwShare">Nw Share</string>
    <string name="Send">Send</string>
    <string name="Receive">Receive</string>
    <string name="NewFolder">New Folder</string>
    <string name="Delete">Delete</string>
    <string name="StorageVolume">Storage Volume</string>
    <string name="Settings">Settings</string>
    <string name="Exit">Exit</string>
    <string name="Wait">Wait</string>
    <string name="Error">Error</string>
    <string name="File">File</string>
    <string name="Files">File(s)</string>
</resources>