<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/back"
        android:title="@string/Back" />
    <item
        android:id="@+id/file"
        android:title="@string/File">
        <menu>
            <group >
                <item
                    android:id="@+id/copy"
                    android:title="@android:string/copy" />
                <item
                    android:id="@+id/paste"
                    android:title="@android:string/paste" />
                <item
                    android:id="@+id/newfolder"
                    android:title="@string/NewFolder" />
                <item
                    android:id="@+id/delete"
                    android:title="@string/Delete" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/send"
        android:title="@string/Send" />
    <item
        android:id="@+id/receive"
        android:title="@string/Receive" />
    <item
        android:id="@+id/storagevolume"
        android:title="@string/StorageVolume" />
    <item
        android:id="@+id/settings"
        android:title="@string/Settings" />
    <item
        android:id="@+id/exit"
        android:title="@string/Exit" />

</menu>